fixed h1.display on tablet

--- a/Sandbox/cottage-class/typography/type_test-v3.css
+++ b/Sandbox/cottage-class/typography/type_test-v3.css
@@ -118,7 +118,7 @@ p.small {
     font-size: 1rem;
   }
   h1.display {
-    font-size: 3.4rem;
+    font-size: 2.2rem;
   }
 }
 
@@ -127,6 +127,10 @@ p.small {
 @media screen and (min-width:992px) {
   .container {
     max-width: 960px;
+  }
+
+  h1.display {
+    font-size: 3.4rem;
   }
 
   h1 {
